# mempalace

./: AGENTS.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bump-plugin-version.yml.disabled  ci.yml
docs/: parity-ledger.md  rust-python-deep-gap-audit.md  rust-python-deep-gap-list.md
python/: CONTRIBUTING.md  README.md
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/benches/: ingest_search.rs
rust/instructions/: help.md  init.md  mine.md  search.md  status.md
rust/src/: audit.rs  bootstrap.rs  bootstrap_docs.rs  bootstrap_files.rs  cli_runtime.rs  cli_support.rs  compress.rs  compression_runtime.rs  config.rs  convo.rs  convo_exchange.rs  convo_exchange_chunking.rs  convo_exchange_rooms.rs  convo_general.rs  convo_general_scoring.rs  convo_general_segments.rs  convo_scan.rs  convo_scan_include.rs  convo_scan_walk.rs  dedup.rs  dialect.rs  drawers.rs  embed.rs  embed_fastembed.rs  embed_hash.rs  embed_runtime_env.rs  embedding_runtime.rs  entity_detector.rs  entity_detector_scan.rs  entity_detector_score.rs  error.rs  helper_cli.rs  hook.rs  init_runtime.rs  instructions.rs  knowledge_graph.rs  layers.rs  lib.rs  main.rs  maintenance_runtime.rs  (+90 more)
rust/src/storage/: mod.rs  sqlite.rs  sqlite_drawers.rs  sqlite_kg.rs  sqlite_schema.rs  vector.rs  vector_batch.rs  vector_query.rs  vector_schema.rs
rust/tests/: cli_integration.rs  mcp_integration.rs  parity_convo_behavior.rs  parity_layers_maintenance.rs  parity_registry_kg_ops.rs  service_integration.rs
tests/: test_mcp_server.py
tutorials/commit/: 0001-rust-bootstrap-rules.md  0002-rust-phase1-cli-mcp.md  0003-rust-fastembed-provider.md  0004-rust-embedding-doctor.md  0005-rust-prepare-embedding.md  0006-rust-hf-endpoint-prepare-success.md  0007-rust-fastembed-smoke-test.md  0008-rust-miner-python-parity.md  0009-rust-mcp-python-shape.md  0010-rust-schema-version-migrate.md  (+210 more)
