[package]
name = "mempalace-rs"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "Rust rewrite workspace for MemPalace"

[features]
default = []

[dependencies]
anyhow = "1"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
blake3 = "1.8.4"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
ignore = "0.4.25"
lancedb = "0.27.2"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3"
tempfile = "3"

[[bench]]
name = "ingest_search"
harness = false
